--- a/website/templates/service.html
+++ b/website/templates/service.html
@@ -87,7 +87,7 @@
                       <li><a href="{% url 'home' %}">- Home</a></li>
                       <li><a href="{% url 'about' %}">- About Us</a></li>
                       <li><a href="{% url 'service' %}">- Service</a></li>
-                      <li><a href="pricing.html">- Pricing</a></li>
+                      <li><a href="{% url 'pricing' %}">- Pricing</a></li>
                       <li><a href="blog.html">- Blog</a></li>
                       <li><a href="blog-details.html">- Blog Details</a></li>
                       <li><a href="{% url 'contact' %}">- Contact</a></li>
@@ -95,7 +95,7 @@
                   </li>
                   <li><a href="{% url 'about' %}">About</a></li>
                   <li><a href="{% url 'service' %}">Service</a></li>
-                  <li><a href="pricing.html">Pricing</a></li>
+                  <li><a href="{% url 'pricing' %}">Pricing</a></li>
                   <li><a href="#">Blog</a>
                     <ul class="dropdown">
                       <li><a href="blog.html">- Blog</a></li>
