--- a/website/templates/pricing.html
+++ b/website/templates/pricing.html
@@ -89,19 +89,13 @@
                       <li><a href="{% url 'service' %}">- Service</a></li>
                       <li><a href="{% url 'pricing' %}">- Pricing</a></li>
                       <li><a href="blog.html">- Blog</a></li>
-                      <li><a href="blog-details.html">- Blog Details</a></li>
                       <li><a href="{% url 'contact' %}">- Contact</a></li>
                     </ul>
                   </li>
                   <li><a href="{% url 'about' %}">About</a></li>
                   <li><a href="{% url 'service' %}">Service</a></li>
                   <li><a href="{% url 'pricing' %}">Pricing</a></li>
-                  <li><a href="#">Blog</a>
-                    <ul class="dropdown">
-                      <li><a href="blog.html">- Blog</a></li>
-                      <li><a href="blog-details.html">- Blog Details</a></li>
-                    </ul>
-                  </li>
+                  <li><a href="#">Blog</a></li>
                   <li><a href="{% url 'contact' %}">Contact</a></li>
                 </ul>
               </div>
